Fix responsive styles for menu items on mobile

--- a/web/app/themes/foods-for-life/style.css
+++ b/web/app/themes/foods-for-life/style.css
@@ -801,6 +801,9 @@ form #order-details .et_pb_promo_button.et_pb_button {
     margin: 0 0 20px;
     position: relative;
     width: 100%; }
+    @media screen and (max-width: 479px) {
+      .et_boxed_layout #page-container .catering__menu .catering__menu-item {
+        min-height: default; } }
     .et_boxed_layout #page-container .catering__menu .catering__menu-item .catering__menu-item__image {
       display: block;
       margin: 0 auto; }
@@ -819,9 +822,9 @@ form #order-details .et_pb_promo_button.et_pb_button {
     @media screen and (min-width: 1550px) {
       .et_boxed_layout #page-container .catering__menu .catering__menu-item {
         margin: 0 2% 2% 0;
-        width: 23%; }
+        width: 23.5%; }
         .et_boxed_layout #page-container .catering__menu .catering__menu-item:nth-of-type(4n) {
-          marin-right: 0; } }
+          margin-right: 0; } }
     .et_boxed_layout #page-container .catering__menu .catering__menu-item h3 {
       font-family: "Open Sans", sans-serif;
       font-weight: 700;
@@ -851,11 +854,14 @@ form #order-details .et_pb_promo_button.et_pb_button {
       .et_boxed_layout #page-container .catering__menu .catering__menu-item .item-description .form__fields {
         bottom: 15px;
         left: 15px;
+        margin-top: 15px;
         position: absolute;
         width: 205px; }
         @media screen and (max-width: 479px) {
           .et_boxed_layout #page-container .catering__menu .catering__menu-item .item-description .form__fields {
-            width: 234px; } }
+            left: 0;
+            position: initial;
+            width: 100%; } }
         .et_boxed_layout #page-container .catering__menu .catering__menu-item .item-description .form__fields input[type=number] {
           background: transparent;
           border: 1px solid #e3dacb;
@@ -863,6 +869,10 @@ form #order-details .et_pb_promo_button.et_pb_button {
           padding: 10px 0 10px 15px;
           text-align: center;
           width: 30%; }
+          @media screen and (max-width: 479px) {
+            .et_boxed_layout #page-container .catering__menu .catering__menu-item .item-description .form__fields input[type=number] {
+              display: block;
+              width: 100%; } }
         .et_boxed_layout #page-container .catering__menu .catering__menu-item .item-description .form__fields button {
           font-family: "Open Sans", sans-serif;
           font-weight: 700;
@@ -874,7 +884,9 @@ form #order-details .et_pb_promo_button.et_pb_button {
           text-align: center; }
           @media screen and (max-width: 479px) {
             .et_boxed_layout #page-container .catering__menu .catering__menu-item .item-description .form__fields button {
-              padding: 9px 37px 10px; } }
+              display: block;
+              padding: 9px 37px 10px;
+              width: 100%; } }
           .et_boxed_layout #page-container .catering__menu .catering__menu-item .item-description .form__fields button:hover {
             cursor: pointer; }
 
